--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>7-Day Leaderboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
     <div class="background-blobs">
@@ -34,6 +34,6 @@
             <p>Last updated: {{ TODAY.strftime('%Y-%m-%d %H:%M:%S') }}</p>
         </footer>
     </div>
-    <script src="/static/js/script.js"></script>
+    <script src="static/js/script.js"></script>
 </body>
 </html>
