--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -82,7 +82,7 @@
                         <i class="fa-solid fa-rocket"></i>
                     </div>
                     <div class="battle-score">{{ future_self_projection }}</div>
-                    <p>Tomorrow's goal</p>
+                    <p>Today's goal</p>
                 </div>
             </div>
         </div>
